<resources>
    <string name="app_name" translatable="false">UniversalSoundboard</string>
    <string name="all_sounds">All Sounds</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy_link"><a href="https://dav-apps.tech/privacy">Privacy Policy</a></string>
    <string name="usb_on_github_link"><a href="https://github.com/Dav2070/UniversalSoundboard.Android">UniversalSoundboard on GitHub</a></string>
    <string name="usb_for_windows_link"><a href="https://www.microsoft.com/en-us/p/universalsoundboard/9nblggh51005">UniversalSoundboard for Windows 10</a></string>
    <string name="dav_apps_link"><a href="https://dav-apps.tech/">Visit dav-apps.tech</a></string>
    <string name="version" translatable="false">Version 0.5</string>
    <string name="copyright" translatable="false">Copyright © 2019 by dav</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="signup">Sign up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_edit_category">Edit category</string>
    <string name="action_delete_category">Delete category</string>
    <string name="action_play_all">Play sounds one after another</string>
    <string name="notification_action_play">Play</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_next">Next</string>
    <string name="notification_action_previous">Previous</string>
    <string name="notification_action_stop">Stop</string>
    <string name="notification_channel_name" translatable="false">Playback</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="sound_list_item_image_description">Image of the sound</string>
    <string name="sound_list_item_favourite_star_description">Favorite</string>
    <string name="category_list_item_icon_description">Icon of the category</string>
    <string name="bottom_category_list_settings_item_icon_description">Settings Icon</string>
    <string name="create_category_dialog_title">New Category</string>
    <string name="create_category_dialog_name_edittext_hint">Name</string>
    <string name="edit_category_dialog_title">Edit Category</string>
    <string name="delete_sound_dialog_title">Delete %1$s</string>
    <string name="delete_sound_dialog_message">Are you sure?</string>
    <string name="delete_sound_dialog_positive_button_text">Delete</string>
    <string name="rename_sound_dialog_title">Rename</string>
    <string name="rename_sound_dialog_name_edittext_hint">Name</string>
    <string name="delete_category_dialog_title">Delete category %1$s</string>
    <string name="delete_category_dialog_message">Are you sure? Your sounds are not impacted.</string>
    <string name="delete_category_dialog_positive_button_text">Delete</string>
    <string name="set_category_dialog_title">Set categories: %1$s</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="fab_sheet_item_new_sound">Add Sounds</string>
    <string name="fab_sheet_item_new_category">New Category</string>
    <string name="sound_item_context_menu_set_category">Set categories</string>
    <string name="sound_item_context_menu_add_to_favourites">Add to favorites</string>
    <string name="sound_item_context_menu_remove_from_favourites">Remove from favorites</string>
    <string name="sound_item_context_menu_change_image">Change image</string>
    <string name="sound_item_context_menu_rename">Rename</string>
    <string name="sound_item_context_menu_delete">Delete</string>
    <string name="playing_sound_list_item_name_description">The name of the sound</string>
    <string name="playing_sound_list_item_skip_previous_description">Skip to previous</string>
    <string name="playing_sound_list_item_play_pause_description">Play or pause</string>
    <string name="playing_sound_list_item_skip_next_description">Skip to next</string>
    <string name="playing_sound_list_item_clear_description">Remove</string>
    <string name="playing_sound_list_item_options_description">Options</string>
    <string name="playing_sound_list_item_context_menu_set_repetitions">Set repetitions</string>
    <string name="settings_play_one_sound_at_once_switch_text">Play only one sound at once</string>
    <string name="settings_show_favourites_switch_text">Show favorites</string>
    <string name="settings_save_playing_sounds_switch_text">Save playing sounds</string>
    <string name="settings_show_playing_sounds_switch_text">Show playing sounds</string>
    <string name="settings_show_categories_of_sounds_switch_text">Show the categories of the sounds</string>
    <string name="account_fragment_title">Your Account</string>
    <string name="account_fragment_caption_1">Save your Soundboard and access it from anywhere</string>
    <string name="account_fragment_text_1">Access the same Soundboard on all your devices</string>
    <string name="account_fragment_text_2">Make sure your sounds don\'t get lost when you lose or reset your device</string>
    <string name="account_fragment_text_3">See your playing sounds on your other devices</string>
    <string name="account_fragment_caption_2">Try it out for free</string>
    <string name="account_fragment_upgrade_link"><a href="https://dav-apps.tech/pricing">Need more?</a></string>
    <string name="account_fragment_used_storage">%s GB of %s GB used</string>
    <string name="settings_fragment_general_tab">General</string>
    <string name="settings_fragment_design_tab">Design</string>
    <string name="sound_fragment_sounds_tab">Sounds</string>
    <string name="sound_fragment_favourites_tab">Favorites</string>

    <array name="playing_sound_item_set_repetitions_options">
        <item>1x</item>
        <item>2x</item>
        <item>5x</item>
        <item>10x</item>
        <item>∞</item>
    </array>
</resources>
