<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/settings_play_one_sound_at_once_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/settings_play_one_sound_at_once_switch_text"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/settings_show_favourites_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/settings_show_favourites_switch_text"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/settings_save_playing_sounds_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/settings_save_playing_sounds_switch_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/privacy_policy_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:text="@string/privacy_policy_link" />

        <TextView
            android:id="@+id/usb_on_github_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:text="@string/usb_on_github_link" />

        <TextView
            android:id="@+id/usb_for_windows_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:text="@string/usb_for_windows_link"/>

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/version" />

        <TextView
            android:id="@+id/copyright_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/copyright" />

    </LinearLayout>
</ScrollView>