<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="playingSound"
            type="app.dav.universalsoundboard.models.PlayingSound" />

        <variable
            name="skipPreviousClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="playPauseClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="skipNextClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="removeClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="menuClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/playing_sound_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/bottomSheetBackgroundColor">

        <TextView
            android:id="@+id/playing_sound_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/playing_sound_list_item_name_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white"
            tools:text="Sound Name" />

        <ImageButton
            android:id="@+id/playing_sound_list_item_skip_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClickListener="@{skipPreviousClickListener}"
            android:padding="4dp"
            android:contentDescription="@string/playing_sound_list_item_skip_previous_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playing_sound_list_item_name"
            app:srcCompat="@drawable/ic_skip_previous_white" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="playing_sound_list_item_skip_previous,playing_sound_list_item_play_pause"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/playing_sound_list_item_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClickListener="@{playPauseClickListener}"
            android:padding="4dp"
            android:contentDescription="@string/playing_sound_list_item_play_pause_description"
            app:layout_constraintStart_toEndOf="@+id/playing_sound_list_item_skip_previous"
            app:layout_constraintTop_toBottomOf="@+id/playing_sound_list_item_name"
            android:src="@drawable/ic_play_arrow_white" />

        <ImageButton
            android:id="@+id/playing_sound_list_item_skip_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClickListener="@{skipNextClickListener}"
            android:padding="4dp"
            android:contentDescription="@string/playing_sound_list_item_skip_next_description"
            app:layout_constraintStart_toEndOf="@+id/playing_sound_list_item_play_pause"
            app:layout_constraintTop_toBottomOf="@+id/playing_sound_list_item_name"
            app:srcCompat="@drawable/ic_skip_next_white" />

        <SeekBar
            android:id="@+id/playing_sound_list_item_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progressTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/playing_sound_list_item_clear"
            app:layout_constraintEnd_toStartOf="@+id/playing_sound_list_item_clear"
            app:layout_constraintStart_toEndOf="@+id/playing_sound_list_item_skip_next"
            app:layout_constraintTop_toTopOf="@+id/playing_sound_list_item_clear" />

        <ProgressBar
            android:id="@+id/playing_sound_list_item_progressbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:indeterminateOnly="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/progressBarStyleHorizontal"
            app:layout_constraintBottom_toBottomOf="@+id/playing_sound_list_item_clear"
            app:layout_constraintEnd_toStartOf="@+id/playing_sound_list_item_clear"
            app:layout_constraintStart_toEndOf="@+id/playing_sound_list_item_skip_next"
            app:layout_constraintTop_toTopOf="@+id/playing_sound_list_item_clear"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/playing_sound_list_item_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClickListener="@{removeClickListener}"
            android:padding="4dp"
            android:contentDescription="@string/playing_sound_list_item_clear_description"
            app:layout_constraintEnd_toStartOf="@+id/playing_sound_list_item_options"
            app:layout_constraintTop_toBottomOf="@+id/playing_sound_list_item_name"
            app:srcCompat="@drawable/ic_clear_white" />

        <ImageButton
            android:id="@+id/playing_sound_list_item_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClickListener="@{menuClickListener}"
            android:padding="4dp"
            android:contentDescription="@string/playing_sound_list_item_options_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playing_sound_list_item_name"
            app:srcCompat="@drawable/ic_more_vert_white" />

    </android.support.constraint.ConstraintLayout>
</layout>